<resources>
    <string name="app_name">Number Theory Algorithms</string>
    <string name="app_name_title">Number Theory</string>
    <string name="app_name_subtitle">Algorithms</string>
    <string name="app_name_light">NT Algorithms</string>
    <string name="separator_comma" translatable="false">,</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="big_integer_mod">mod</string>
    <string name="expand_result">expand</string>
    <string name="clipboard_copy">copy</string>
    <string name="clipboard_paste">paste</string>
    <string name="clipboard_clear">clear</string>
    <string name="documentation">doc&#8230;</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="please_wait">Please wait while this might take some time.</string>
    <string name="result">result</string>
    <string name="run_example_1">S₁</string>
    <string name="run_example_2">S₂</string>
    <string name="run_example_3">S₃</string>
    <string name="run_example_4">S₄</string>
    <string name="run_example_5">S₅</string>
    <string name="run_example_6">S₆</string>
    <string name="menu_examples">Examples</string>
    <string name="back">back</string>
    <string name="representation">representation</string>
    <string name="canceling">Canceling&#8230;</string>
    <string name="canceled">Canceled</string>
    <string name="label_a" translatable="false">a</string>
    <string name="label_b" translatable="false">b</string>
    <string name="label_c" translatable="false">c</string>
    <string name="label_p" translatable="false">p</string>
    <string name="label_m" translatable="false">m</string>
    <string name="label_n" translatable="false">n</string>
    <string name="result_example_1">result example no 1</string>
    <string name="result_example_2">result example no 2</string>
    <string name="result_example_3">result example no 3</string>
    <string name="result_example_4">result example no 4</string>
    <string name="result_example_5">result example no 5</string>
    <string name="result_example_6">result example no 6</string>
    <string name="settings_preference_category_clipboard">Clipboard Buttons Configurations</string>
    <string name="settings_vibrate_on_clipboard_button_click">Vibrate on clipboard button click</string>
    <string name="settings_notify_on_clipboard_button_click">Notify on clipboard button click</string>
    <string name="settings_preference_category_ui">UI Configurations</string>
    <string name="settings_smaller_controls">Smaller controls</string>
    <string name="settings_smaller_clipboard_buttons">Smaller clipboard buttons</string>
    <string name="settings_smaller_result_display">Smaller result display</string>
    <string name="settings_square_result_display">Square result display</string>
    <string name="settings_preference_category_misc">Misc Configurations</string>
    <string name="settings_disable_tab_swiping">Disable tab swiping</string>
    <string name="settings_hide_example_buttons">Hide example buttons</string>
    <string name="settings_run_app_in_full_screen">Run app in full screen</string>
    <string name="settings_show_result_in_monospace">Show result in monospace</string>
    <string name="settings_menu_reset_to_default">Reset to default</string>
    <string name="calculator_add" translatable="false">a + b</string>
    <string name="calculator_subtract" translatable="false">a - b</string>
    <string name="calculator_multiply" translatable="false">a · b</string>
    <string name="calculator_divide" translatable="false">a / b</string>
    <string name="calculator_power" translatable="false">aᵇ</string>
    <string name="calculator_root" translatable="false">ᵇ&#8730;a</string>
    <string name="calculator_gcd" translatable="false">gcd(|a|, |b|)</string>
    <string name="calculator_lcm" translatable="false">lcm(a, b)</string>
    <string name="calculator_mod" translatable="false">a (mod b)</string>
    <string name="calculator_mod_inverse" translatable="false">a⁻¹ (mod b)</string>
    <string name="calculator_is_a_prime">is a prime?</string>
    <string name="calculator_euler_phi">euler\'s <i>ϕ</i>(a)</string>
    <string name="calculator_factorial">factorial a!</string>
    <string name="calculator_next_prime_to_a">next prime to a</string>
    <string name="calculator_next_twin_prime_to_a">next twin prime to a</string>
    <string name="calculator_addition_label_result1">a + b</string>
    <string name="calculator_subtraction_label_result1">a - b</string>
    <string name="calculator_multiplication_label_result1">a · b</string>
    <string name="calculator_division_label_result1">a / b quotient</string>
    <string name="calculator_division_label_result2">a / b remainder</string>
    <string name="calculator_power_label_result1">aᵇ</string>
    <string name="calculator_root_label_result1">root(a, b)</string>
    <string name="calculator_root_label_result2">a - root(a, b)ᵇ</string>
    <string name="calculator_gcd_label_result1">gcd(|a|, |b|)</string>
    <string name="calculator_lcm_label_result1">lcm(a, b)</string>
    <string name="calculator_mod_label_result1">a (mod b)</string>
    <string name="calculator_mod_inverse_label_result1">a⁻¹ (mod b)</string>
    <string name="calculator_a_is_probable_prime_label_result1">a is probable prime</string>
    <string name="calculator_euler_phi_of_a">euler\'s ϕ(a)</string>
    <string name="calculator_a_factorial">a!</string>
    <string name="calculator_a_is_composite_label_result1">a is composite</string>
    <string name="calculator_next_probable_prime_label_result1">next probable prime to a</string>
    <string name="calculator_next_probable_twin_prime_label_result1">next probable twin prime to a</string>
    <string name="calculator_next_probable_twin_prime_label_result2">next probable twin prime to a</string>
    <string name="menu_calculator_documentation">Documentation</string>
    <string name="rsa_examples">Examples</string>
    <string name="rsa_100" translatable="false">RSA-100</string>
    <string name="rsa_576" translatable="false">RSA-576</string>
    <string name="rsa_768" translatable="false">RSA-768</string>
    <string name="rsa_1536" translatable="false">RSA-1536</string>
    <string name="rsa_2048" translatable="false">RSA-2048</string>
    <string name="more_rsa">More&#8230;</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="documentation_problem">There was a problem loading the documentation.%s</string>
    <string name="quadratic_form">Simple Quadratic Form</string>
    <string name="quadratic_form_description">Solve for <i><b>x,y</b></i> such as <i><b>bxy+dx+ey=f</b></i> where <i><b>b,d,e,f,x,y ∊ ℤ</b></i> with <i><b>b ≠ 0</b></i>.</string>
    <string name="euclidean_algorithm">Euclidean Algorithm</string>
    <string name="euclidean_algorithm_description">Compute the Greatest Common Divisor (GCD) of two numbers <i><b>a</b></i> and <i><b>b</b></i>. The GCD is the largest number that divides both <i><b>a</b></i> and <i><b>b</b></i> without leaving a remainder.</string>
    <string name="extended_euclidean_algorithm">Extended Euclidean Algorithm</string>
    <string name="extended_euclidean_algorithm_description">Solve for <i><b>x,y</b></i> such as <i><b>ax+by = gcd(a, b)</b></i> where <i><b>a,b ∊ ℕ</b></i>, <i><b>x,y ∊ ℤ</b></i>.</string>
    <string name="linear_diophantine_equation_in_two_variables">Linear Diophantine Equation In Two Variables</string>
    <string name="linear_diophantine_equation_in_two_variables_description">Solve for <i><b>x,y</b></i> such as <i><b>ax+by=c</b></i> where <i><b>a,b,c,x,y ∊ ℤ</b></i> with <i><b>a,b ≠ 0</b></i>.</string>
    <string name="linear_congruence_in_one_variable">Linear Congruence In One Variable</string>
    <string name="linear_congruence_in_one_variable_description">Solve for <i><b>x</b></i>, a congruence of the form <i><b>ax ≡ b (mod m)</b></i> where <i><b>a,b,x ∊ ℤ</b></i>, <i><b>m ∊ ℕ</b></i>.</string>
    <string name="linear_congruence_in_two_variables">Linear Congruence In Two Variables</string>
    <string name="linear_congruence_in_two_variables_description">Solve for <i><b>x,y</b></i> a congruence of the form <i><b>ax+by ≡ c (mod m)</b></i> where <i><b>a,b,c,x,y ∊ ℤ</b></i>, <i><b>m ∊ ℕ</b></i>.</string>
    <string name="tonelli_shanks_algorithm">Tonelli-Shanks Algorithm</string>
    <string name="tonelli_shanks_algorithm_description">Solve for <i><b>x</b></i> a congruence of the form <i><b>x² ≡ a (mod p)</b></i>, where <i><b>p ∊ PRIMES</b></i>.</string>
    <string name="mod_factors">Mod Factors</string>
    <string name="mod_factors_description">Find <i><b>n ≡ bc (mod a)</b></i> where <i><b>(ax+c)(ay+b) = a(axy+bx+cy)+bc = n</b></i>.</string>
    <string name="primes_list">Primes List</string>
    <string name="primes_list_description">List of primes ordered in columns.</string>
    <string name="quadratic_form_title">SIMPLE QUADRATIC FORM</string>
    <string name="quadratic_form_label_expression">bxy+dx+ey=f</string>
    <string name="quadratic_form_expression_hint">b, d, e, f</string>
    <string name="quadratic_form_expression_autofillhints">b, d, e, f</string>
    <string name="quadratic_form_run_short"><strong><font color='#E3E1D7'>●</font></strong>\tSolve bxy+dx+ey=f</string>
    <string name="quadratic_form_run_long"><strong><font color='#E3E1D7'>●</font></strong>\tSolve for x,y such as bxy+dx+ey=f</string>
    <string name="quadratic_form_m_plus">m +</string>
    <string name="quadratic_form_m_hint">m</string>
    <string name="quadratic_form_m_minus">m -</string>
    <string name="quadratic_form_r_plus">r +</string>
    <string name="quadratic_form_r_hint">r</string>
    <string name="quadratic_form_r_minus">r -</string>
    <string name="quadratic_form_result_representation_f_mod_m_r">representation + f (mod m) = r</string>
    <string name="quadratic_form_example_1_expression">8, 3, 3, 88</string>
    <string name="quadratic_form_example_1_m">8</string>
    <string name="quadratic_form_example_1_r">0</string>
    <string name="quadratic_form_menu_example_1">Example 8xy + 3x + 3y = 88</string>
    <string name="quadratic_form_menu_example_2">Example 16xy + 7x + 3y = 113</string>
    <string name="quadratic_form_menu_example_3">Example 8xy + 7x + 7y = 83</string>
    <string name="quadratic_form_menu_example_4">Example 16xy + 15x + 11y = 104</string>
    <string name="quadratic_form_menu_example_5">Example 8xy + 3x + 5y = 14</string>
    <string name="quadratic_form_menu_include_trivial_solutions">Trivial solutions</string>
    <string name="quadratic_form_menu_include_only_positive_solutions">Only positive solutions</string>
    <string name="quadratic_form_menu_include_only_negative_solutions">Only negative solutions</string>
    <string name="extended_euclidean_algorithm_menu_example_1">Example 7x + 21y = GCD(7, 21) = 7</string>
    <string name="extended_euclidean_algorithm_menu_example_2">Example 7x + 32y = GCD(7, 32) = 1</string>
    <string name="extended_euclidean_algorithm_menu_example_3">Example 6x + 10y = GCD(6, 10) = 2</string>
    <string name="linear_diophantine_equation_in_two_variables_menu_example_1">Example 7x - 21y = 10</string>
    <string name="linear_diophantine_equation_in_two_variables_menu_example_2">Example 7x - 32y = 15</string>
    <string name="linear_diophantine_equation_in_two_variables_menu_example_3">Example 6x - 10y = 4</string>
    <string name="mod_factors_menu_example_1">Example 551, 8</string>
    <string name="mod_factors_menu_example_2">Example 551, 16</string>
    <string name="mod_factors_menu_example_3">Example 551, 32</string>
    <string name="mod_factors_menu_example_4">Example 551, 6</string>
    <string name="mod_factors_menu_example_5">Example 551, 36</string>
    <string name="mod_factors_menu_example_6">Example 551, 216</string>
</resources>