<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/mod_factors_menu_example_1"
            android:title="@string/mod_factors_menu_example_1"
            app:showAsAction="never" />
        <item
            android:id="@+id/mod_factors_menu_example_2"
            android:title="@string/mod_factors_menu_example_2"
            app:showAsAction="never" />
        <item
            android:id="@+id/mod_factors_menu_example_3"
            android:title="@string/mod_factors_menu_example_3"
            app:showAsAction="never" />
        <item
            android:id="@+id/mod_factors_menu_example_4"
            android:title="@string/mod_factors_menu_example_4"
            app:showAsAction="never" />
        <item
            android:id="@+id/mod_factors_menu_example_5"
            android:title="@string/mod_factors_menu_example_5"
            app:showAsAction="never" />
        <item
            android:id="@+id/mod_factors_menu_example_6"
            android:title="@string/mod_factors_menu_example_6"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/menu_group_calculator_documentation">
        <item
            android:id="@+id/menu_documentation"
            android:title="@string/menu_calculator_documentation"
            android:icon="@drawable/ic_baseline_docs_24"
            app:showAsAction="ifRoom" />
    </group>
</menu>